--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -12,6 +12,7 @@
   --t007-toast-border: unset;
   --t007-toast-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.06), 0 6px 16px rgba(0, 0, 0, 0.08);
   --t007-toast-icon-line-height: 1.25;
+  --t007-toast-image-background: black;
   --t007-toast-text-stroke: 0.15px rgba(0, 0, 0, 0.35);
   --t007-toast-text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
   --t007-toast-max-lines: 7;
@@ -20,13 +21,20 @@
   --t007-toast-x-color: red;
 }
 
-:where(:root, .t007-toast-container) {
+:where(:root, .t007-toast) {
   --t007-toast-type-color: whitesmoke;
   --t007-toast-focus-visible-color: var(--t007-toast-font-color);
   --t007-toast-focus-visible-outline: 2px solid var(--t007-toast-focus-visible-color);
   --t007-toast-progress-background: var(--t007-toast-type-color);
   --t007-toast-progress-backdrop-background: rgb(from var(--t007-toast-type-color) r g b / 0);
   --t007-toast-font-color: var(--t007-toast-type-color);
+  --t007-toast-action-button-color: var(--t007-toast-font-color);
+  --t007-toast-action-button-active-color: var(--t007-toast-action-button-color);
+  --t007-toast-action-button-background: rgba(from currentColor r g b / 0.1);
+  --t007-toast-action-button-active-background: rgba(from currentColor r g b / 0.2);
+}
+
+:where(:root, .t007-toast-container) {
   --t007-toast-unit: 1rem;
   --t007-toast-container-margin-top: calc(var(--t007-toast-unit) / 2);
   --t007-toast-container-margin-bottom: calc(var(--t007-toast-unit) / 2);
@@ -49,14 +57,9 @@
   --t007-toast-image-height: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-border-radius: calc(var(--t007-toast-border-radius) - (var(--t007-toast-padding) / 2));
   --t007-toast-image-object-fit: cover;
-  --t007-toast-image-background: black;
   --t007-toast-actions-container-width: 65%;
   --t007-toast-actions-container-max-width: fit-content;
   --t007-toast-actions-container-gap: calc(var(--t007-toast-unit) / 4);
-  --t007-toast-action-button-color: var(--t007-toast-font-color);
-  --t007-toast-action-button-active-color: var(--t007-toast-action-button-color);
-  --t007-toast-action-button-background: rgba(from currentColor r g b / 0.1);
-  --t007-toast-action-button-active-background: rgba(from currentColor r g b / 0.2);
   --t007-toast-action-button-font-size: calc(var(--t007-toast-font-size) / 1.1);
   --t007-toast-action-button-padding-inline: calc(var(--t007-toast-unit) / 2.2);
   --t007-toast-action-button-padding-block: calc(var(--t007-toast-unit) / 3.3);
@@ -226,7 +229,9 @@
   backdrop-filter: blur(var(--t007-toast-background-blur));
   overflow: hidden;
   will-change: transform, opacity;
-  transition: transform 300ms ease, opacity 300ms ease;
+  transition:
+    transform 300ms ease,
+    opacity 300ms ease;
   animation-timing-function: var(--t007-toast-animation-timing-function);
   animation-fill-mode: forwards;
   animation-duration: var(--t007-toast-animation-duration);
@@ -430,7 +435,10 @@
   border: var(--t007-toast-action-button-border);
   border-radius: var(--t007-toast-action-button-border-radius);
   opacity: 0.9;
-  transition: opacity 200ms ease, color 200ms ease, background-color 200ms ease;
+  transition:
+    opacity 200ms ease,
+    color 200ms ease,
+    background-color 200ms ease;
 }
 
 .t007-toast-action-button:is(:hover, :focus-visible) {
