--- a/T007_input_library/T007_input.css
+++ b/T007_input_library/T007_input.css
@@ -107,9 +107,9 @@
 .t007-input-field *[class^="t007-input"]::before {
   box-sizing: border-box;
   font-family: var(--t007-input-font-family);
-  /* transition-property: transform, filter, background-color, color, border, right, left, top, bottom, width, height, font-size, scale; */
-  /* transition-duration: 150ms; */
-  /* transition-timing-function: ease; */
+  transition-property: transform, filter, background-color, color, border, right, left, top, bottom, width, height, font-size, scale;
+  transition-duration: 150ms;
+  transition-timing-function: ease;
 }
 
 :where(.t007-input-field) *,
